[gd_scene load_steps=5 format=3 uid="uid://d4kd8mk5u1hsk"]

[ext_resource type="Script" path="res://main.gd" id="1_0p4gv"]
[ext_resource type="PackedScene" uid="uid://b5tcq3u6018i5" path="res://system/menu/library/library.tscn" id="2_kai27"]
[ext_resource type="PackedScene" uid="uid://dliso8lp1b3b7" path="res://system/menu/directory_manager/directory_manager.tscn" id="3_l643o"]
[ext_resource type="PackedScene" uid="uid://d0tn6dttci0wc" path="res://system/menu/edit_window/edit_window.tscn" id="4_oynk0"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0p4gv")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Library" parent="TabContainer" instance=ExtResource("2_kai27")]
unique_name_in_owner = true
layout_mode = 2

[node name="Settings" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="DirectoryManager" parent="TabContainer/Settings" instance=ExtResource("3_l643o")]
unique_name_in_owner = true
layout_mode = 1

[node name="EditWindow" parent="." instance=ExtResource("4_oynk0")]
unique_name_in_owner = true
title = "Edit Game Details"
initial_position = 2
visible = false
exclusive = true

[connection signal="register_updated" from="TabContainer/Settings/DirectoryManager" to="." method="_on_register_updated"]
[connection signal="details_saved" from="EditWindow" to="." method="_on_edit_window_details_saved"]
